--- a/css/index.css
+++ b/css/index.css
@@ -169,8 +169,8 @@ body {
 	margin: 10px;
 	position: absolute;
 	box-sizing: border-box;
-	background-color: #ff8c61;
-	perspective: 1000px;s
+	background-color: red;
+	perspective: 1000px;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
@@ -181,6 +181,8 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 .ballot-card-paper-front {
