--- a/css/index.css
+++ b/css/index.css
@@ -33,14 +33,14 @@ body {
 }
 #raffleBoxWrapper {
 	width: 100%;
-	max-width: 500px;
+	max-width: 600px;
 	min-height: 150px;
 	position: relative;
 	margin: 40px;
 }
 #raffleBox {
 	width: 100%;
-	max-width: 500px;
+	max-width: 600px;
 	min-height: 150px;
 	background-color: #fff;
 	box-shadow: 0 0 0px 20px #ffffff99;
@@ -97,7 +97,7 @@ body {
 	position: absolute;
 	top: 0;
 	width: 100%;
-	height: 70px;
+	height: 80px;
 	background-color: #ffffff99;
 	z-index: 30;
 }
@@ -105,7 +105,7 @@ body {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 70px;
+	height: 80px;
 	background-color: #ffffff99;
 	z-index: 30;
 }
@@ -113,8 +113,8 @@ body {
 	border: 1px solid #f0f0f0;
 	border-radius: 100%;
 	background: #f5f5f5;
-	width: 55px;
-	height: 55px;
+	width: 65px;
+	height: 65px;
 	margin-left: 7px;
 	margin-right: 7px;
 }
@@ -134,6 +134,8 @@ body {
 .btn-native:hover {
 	background-color: #ff8c61dd !important;
 	border-color: #ff8c61dd !important;	
+	--bs-btn-active-bg: #ff8c61dd !important;	
+	--bs-btn-active-border-color: #ff8c61dd !important;	
 }
 .btn-icon-action:not(.active):active,
 .btn-icon-action:not(.active):focus,
@@ -169,7 +171,7 @@ body {
 	margin: 10px;
 	position: absolute;
 	box-sizing: border-box;
-	background-color: red;
+	background-color: #ff8c61;
 	perspective: 1000px;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
